расширена функциональность